improvements in statistics